src/test/ui/coherence/coherence-projection-conflict-ty-param.re.stderr
error[E0119]: conflicting implementations of trait `Foo<_>` for type `std::option::Option<_>`:
  --> $DIR/coherence-projection-conflict-ty-param.rs:14:1
   |
LL | impl <P, T: Foo<P>> Foo<P> for Option<T> {}
   | ---------------------------------------- first implementation here
LL | 
LL | impl<T, U> Foo<T> for Option<U> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `std::option::Option<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
